<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <EditText
        android:id="@+id/txtFirstNameSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"
        android:inputType="text"/>

    <EditText
        android:id="@+id/txtLastNameSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:inputType="text"/>

    <EditText
        android:id="@+id/txtEmailSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enteremail"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/txtPasswordSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterpassword"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/txtRetypePasswordSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/retypepassword"
        android:inputType="textPassword"/>


    <Button
        android:id="@+id/btnCreateAccountSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createaccount"
        android:textColor="@android:color/black"
        android:background="@color/myfavouriteblue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alreadyhaveaccount"
        android:textAlignment="center"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/btnLoginSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:background="@color/myfavouriteblue"/>



</LinearLayout>