<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/workout2"
    tools:context=".Home"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnProfileHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:layout_margin="4dp"/>

    <Button
        android:id="@+id/btnGymInstructorsHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gym_instructors"
        android:layout_margin="4dp"/>

    <Button
        android:id="@+id/btnGymLocationsHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gym_locations"
        android:layout_margin="4dp"/>

    <Button
        android:id="@+id/btnWorkoutsHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_workout_session"
        android:layout_margin="4dp"/>

    <Button
        android:id="@+id/btnPastWorkoutsHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_past_sessions"
        android:layout_margin="4dp"/>

    <Button
        android:id="@+id/btnLanguageHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_preference"
        android:layout_margin="4dp"/>

    <Button
        android:id="@+id/btnLogoutHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_margin="4dp"/>

</LinearLayout>