<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/workout2"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <EditText
        android:id="@+id/txtUsernameLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enteremail"
        android:textColor="@color/myfavouriteyellow"
        android:textColorHint="@color/myfavouriteyellow"
        android:inputType="text"/>

    <EditText
        android:id="@+id/txtPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterpassword"
        android:textColor="@color/myfavouriteyellow"
        android:textColorHint="@color/myfavouriteyellow"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnLoginLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_margin="4dp"
        android:textColor="@android:color/black"
        android:background="@color/myfavouriteyellow"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donthaveaccount"
        android:textAlignment="center"
        android:layout_margin="4dp"
        android:textColor="@color/myfavouriteyellow"/>

    <Button
        android:id="@+id/btnSignupLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createaccount"
        android:layout_margin="4dp"
        android:textColor="@android:color/black"
        android:background="@color/myfavouriteyellow"/>


</LinearLayout>
